feat: 接入 MySQL 和 Redis 本地开发环境
